// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default basic: basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    \\"id\\": \\"kN4IPA==\\",
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`default missingId: missingId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;

exports[`default stringId: stringId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    \\"id\\": \\"App.Components.Greeting.hello\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    \\"id\\": \\"kN4IPA==\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
});
"
`;

exports[`murmur3 hash basic: basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    \\"id\\": \\"kN4IPA==\\",
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`murmur3 hash missingId: missingId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;

exports[`murmur3 hash stringId: stringId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    \\"id\\": \\"App.Components.Greeting.hello\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';
export default defineMessages({
  new: {
    \\"id\\": \\"kN4IPA==\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
});
"
`;
